[gd_scene load_steps=8 format=3 uid="uid://cpqsyt04ry6ev"]

[ext_resource type="Script" path="res://Script/menu.gd" id="1_8fee0"]
[ext_resource type="Texture2D" uid="uid://d0xnjgxf8xhnn" path="res://graphics/backgrounds/background.png" id="1_yeorm"]
[ext_resource type="Texture2D" uid="uid://ikil4np2uost" path="res://graphics/buttons/play.png" id="3_i4maa"]
[ext_resource type="Texture2D" uid="uid://be1riyjn8dydv" path="res://graphics/buttons/quit.png" id="4_qk11e"]
[ext_resource type="FontFile" uid="uid://boy2b1846m6sg" path="res://graphics/fonts/EvilEmpire-4BBVK.ttf" id="4_x4knp"]
[ext_resource type="AudioStream" uid="uid://h05xtme1gmbd" path="res://audio/modern-trailer-short-version-16066.mp3" id="6_2dqil"]
[ext_resource type="AudioStream" uid="uid://brvnqmvpmyaiv" path="res://audio/sci-fi-energy-gun-39409.mp3" id="7_hlcco"]

[node name="menu" type="Node2D"]
script = ExtResource("1_8fee0")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(767.223, 432)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_yeorm")

[node name="Button" type="Button" parent="."]
offset_left = 1121.0
offset_top = 666.0
offset_right = 1262.0
offset_bottom = 738.0
icon = ExtResource("3_i4maa")
flat = true

[node name="Button2" type="Button" parent="."]
offset_left = 273.0
offset_top = 661.0
offset_right = 414.0
offset_bottom = 733.0
theme_override_fonts/font = ExtResource("4_x4knp")
icon = ExtResource("4_qk11e")
flat = true

[node name="bg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2dqil")
autoplay = true

[node name="button_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_hlcco")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.325

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.325

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
